[gd_scene load_steps=11 format=3 uid="uid://d01gq5bg5bqaq"]

[ext_resource type="FontFile" uid="uid://bwfc7ghlkd2x2" path="res://assets/fonts/custom_font.ttf" id="1_48awc"]
[ext_resource type="Script" path="res://components/ui/game_over/game_over.gd" id="1_pmcax"]
[ext_resource type="FontVariation" uid="uid://cs4lytfyex3he" path="res://components/ui/game_over/font_style.tres" id="2_d46t0"]
[ext_resource type="Texture2D" uid="uid://c4yj8stmt8k4r" path="res://assets/images/restart_button.png" id="2_o00en"]
[ext_resource type="Texture2D" uid="uid://b2mocto7dmetq" path="res://assets/images/restart_button_pressed.png" id="3_w7w8k"]
[ext_resource type="Texture2D" uid="uid://bh5yrdb46nali" path="res://assets/images/home_button.png" id="5_rx2kn"]
[ext_resource type="Texture2D" uid="uid://dcih1xrbraoa0" path="res://assets/images/home_button_pressed.png" id="6_sjtj7"]
[ext_resource type="Texture2D" uid="uid://bfomeunsrp71h" path="res://assets/images/high_score_button.png" id="7_q3hbk"]
[ext_resource type="Texture2D" uid="uid://du25ejdmia6xu" path="res://assets/images/high_score_button_pressed.png" id="8_leg1x"]

[sub_resource type="FontVariation" id="FontVariation_cskkl"]
base_font = ExtResource("1_48awc")
variation_embolden = 0.25

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pmcax")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_bottom = 8.0
color = Color(0, 0, 0, 0.752941)
metadata/_edit_lock_ = true

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 144.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="GameOverLabel" type="Label" parent="Container"]
layout_mode = 2
anchor_top = 0.113
anchor_right = 1.0
anchor_bottom = 0.34
offset_top = 0.399994
offset_bottom = -0.959991
theme_override_fonts/font = SubResource("FontVariation_cskkl")
theme_override_font_sizes/font_size = 152
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ScoreLabel" type="Label" parent="Container"]
layout_mode = 2
anchor_top = 0.313
anchor_right = 1.0
anchor_bottom = 0.42
offset_left = 160.0
offset_top = 16.4
offset_right = -320.0
offset_bottom = -16.0
theme_override_fonts/font = ExtResource("2_d46t0")
theme_override_font_sizes/font_size = 64
text = "Score"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ScoreValueLabel" type="Label" parent="Container"]
layout_mode = 2
anchor_top = 0.313
anchor_right = 1.0
anchor_bottom = 0.42
offset_left = 320.0
offset_top = 16.4
offset_right = -192.0
offset_bottom = -16.0
theme_override_fonts/font = ExtResource("2_d46t0")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScoreLabel" type="Label" parent="Container"]
layout_mode = 2
anchor_top = 0.42
anchor_right = 1.0
anchor_bottom = 0.527
offset_left = 160.0
offset_top = -16.0
offset_right = -320.0
offset_bottom = -48.4
theme_override_fonts/font = ExtResource("2_d46t0")
theme_override_font_sizes/font_size = 64
text = "Best"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScoreValueLabel" type="Label" parent="Container"]
layout_mode = 2
anchor_top = 0.42
anchor_right = 1.0
anchor_bottom = 0.527
offset_left = 320.0
offset_top = -16.0
offset_right = -192.0
offset_bottom = -48.4
theme_override_fonts/font = ExtResource("2_d46t0")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="RestartTouchScreenButton" type="TouchScreenButton" parent="Container"]
position = Vector2(224, 632)
texture_normal = ExtResource("2_o00en")
texture_pressed = ExtResource("3_w7w8k")
metadata/_edit_lock_ = true

[node name="HomeTouchScreenButton" type="TouchScreenButton" parent="Container"]
position = Vector2(160, 856)
texture_normal = ExtResource("5_rx2kn")
texture_pressed = ExtResource("6_sjtj7")
metadata/_edit_lock_ = true

[node name="HighScoreTouchScreenButton" type="TouchScreenButton" parent="Container"]
position = Vector2(352, 856)
texture_normal = ExtResource("7_q3hbk")
texture_pressed = ExtResource("8_leg1x")
metadata/_edit_lock_ = true

[connection signal="released" from="Container/RestartTouchScreenButton" to="." method="_on_restart_touch_screen_button_released"]
[connection signal="released" from="Container/HomeTouchScreenButton" to="." method="_on_home_touch_screen_button_released"]
[connection signal="released" from="Container/HighScoreTouchScreenButton" to="." method="_on_high_score_touch_screen_button_released"]
